--- a/2.1 Downstream_Analysis_Grouping.Rmd
+++ b/2.1 Downstream_Analysis_Grouping.Rmd
@@ -29,7 +29,7 @@ DEG_1dpi <- read_excel("~/R/Downloads/DEG_FirstDay.xlsx")
 DEG_7dpi <- read_excel("~/R/Downloads/DEG_Acute.xlsx")
 DEG_21dpi <- read_excel("~/R/Downloads/DEG_21dpi.xlsx")
 DEG_1mpi <- read_excel("~/R/Downloads/DEG_Sub-Chronic.xlsx")
-seurat_integrated_ME <- readRDS("~/R/Downloads/Seurat_Integrated_ME.rds")
+
 ```
 
 Time: Acute - 7 dpi
@@ -58,7 +58,7 @@ go_res <- enrichGO(
 general_go <- barplot(go_res, showCategory = 20)
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system development|nervous system process|apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$"
+pattern <- "nervous system development|nervous system process|apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|^regulation of reactive oxygen species metabolic process$|neuroinflammatory"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
   filter(p.adjust < 0.1) %>%
@@ -77,12 +77,6 @@ gene_go <- filtered_go_res@result %>%
 # We are focus on CNS
 gene_go <- gene_go[!grepl("peripheral nervous system", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("receptor localization", gene_go$go_term), ]
-
-gene_go <- gene_go %>%
-  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
-  "Lgals3", "Postn", "Col3a1", "Serpina3n", "C1qa", "Tnc", "C1qc", "C1qb", "Thbs2", "S100a9",
-  "Sema6d", "Shh", "Cxcl12", "Hapln2", "Spock3", "Lgi1", "Tnfaip6", "F12", "Serpinb1a", "F2"
-))))
 
 genes_sci <- unique(gene_go$gene)
 
@@ -112,13 +106,14 @@ DEG_7dpi_plot <- ggplot(DEG_7dpi_filtered, aes(x = Gene, y = avg_log2FC, fill = 
     x = "Gene",
     y = "Average Log2FC",
     fill = "Ratio of Cells Expressing the Gene",
-    title = "Top-ranked upregulated and downregulated genes based on log2 fold change",
-    caption = "FDR < 0.05"
-  ) +
+    title = "Top-ranked upregulated and downregulated genes based on log2 fold change"
+    ) + 
   theme_minimal(base_size = 13) +
   theme(legend.title = element_text(size = 14), 
-        axis.text.x = element_text(angle = 90, hjust = 1, size = 10, vjust = 0.5),
-        legend.position = "bottom")
+        axis.text.x = element_text(angle = 90, hjust = 1, size = 14, vjust = 0.5), 
+        legend.position = "bottom", 
+        plot.title = element_text(hjust = 0.5))
+
 DEG_7dpi_plot
 
 ggsave("~/R/Figures2/DifferentialExpression_Acute.png", dpi = 1080, width = 11, height = 8)
@@ -151,7 +146,7 @@ go_res <- enrichGO(
     pAdjustMethod = "fdr")
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system development|nervous system process|regulation of apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of inflammatory response|regulation of autophagy|metallopeptidase|^regulation of peptidase activity$|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
+pattern <- "nervous system development|nervous system process|regulation of apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of inflammatory response|regulation of autophagy|metallopeptidase|^regulation of peptidase activity$|^regulation of reactive oxygen species metabolic process$|neuroinflammatory|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
   filter(p.adjust < 0.1) %>%
@@ -172,11 +167,6 @@ gene_go <- gene_go[!grepl("protein localization", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("prostatic", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("sympathetic", gene_go$go_term), ]
-gene_go <- gene_go %>%
-  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
-  "Lgals3", "Postn", "Col3a1", "Serpina3n", "C1qa", "Tnc", "C1qc", "C1qb", "Thbs2", "S100a9",
-  "Sema6d", "Shh", "Cxcl12", "Hapln2", "Spock3", "Lgi1", "Tnfaip6", "F12", "Serpinb1a", "F2"
-))))
 
 go_categories <- list(
   `Nervous system patterning and regulation` = 
@@ -194,10 +184,12 @@ go_categories <- list(
   ),
   `Spinal cord development` = 
     "spinal cord",
-  `Immune and inflammatory processes` = c(
+  `Acute inflammatory microenvironment` = c(
     "acute",
     "inflammatory response",
-    "immune response"
+    "immune response",
+    "reactive oxygen species",
+    "neuroinflammatory"
   ),
   `Apoptosis and neuronal survival` =
     "apoptotic signaling pathway",
@@ -326,7 +318,7 @@ final_matrix_non_signaling <- go_non_signaling %>%
   distinct(go_term_grouped, mean_pvalue_group) %>%
   left_join(binary_matrix_non_signaling, by = "go_term_grouped") %>%
   rowwise() %>%
-  mutate(total_count = sum(c_across(where(is.numeric))[-1])) %>%
+  mutate(total_count = sum(pmin(1, c_across(where(is.numeric))[-1]))) %>%
   ungroup()
 
 cols_to_check <- final_matrix_non_signaling %>%
@@ -382,8 +374,8 @@ matrix_pval_non_signaling <- -log10(final_matrix_non_signaling$mean_pvalue_group
 names(matrix_pval_non_signaling) <- final_matrix_non_signaling$go_term_grouped
 
 col_fun <- colorRamp2(
-  c(0, 1, 3, 6, 9),
-  c("#ebebf3", "#d1d3ea", "#b0b3d9", "#888cc2", "#666ca8"))
+  c(0, 1),
+  c("#ebebf3","#888cc2"))
 col_fun2 <- colorRamp2(c(min(matrix_counts_non_signaling), max(matrix_counts_non_signaling)), c("#FAEBD7", "#8B8378"))
 col_fun3 <- colorRamp2(c(min(matrix_pval_non_signaling), max(matrix_pval_non_signaling)), c("cadetblue", "tomato"))
 
@@ -406,7 +398,7 @@ column_annotation <- HeatmapAnnotation(
         col = regulation_colors,
         gp = gpar(col = "white", lwd = 1.5)),
     annotation_name_side = "left",
-    annotation_name_gp = gpar(fontsize = 6))
+    annotation_name_gp = gpar(fontsize = 8))
 
 
 # Heatmap for non-signaling terms - Status (Presence/Absence)
@@ -419,12 +411,12 @@ hm_binary_non_signaling <- Heatmap(matrix_binary_non_signaling,
                                cluster_rows = FALSE,
                                show_row_dend = FALSE,
                                show_column_dend = FALSE,
-                               row_names_gp = gpar(fontsize = 7),
+                               row_names_gp = gpar(fontsize = 9),
                                row_names_side = "left",
                                column_names_rot = 90,
-                               column_names_gp = gpar(fontsize = 7),
-                               heatmap_legend_param = list(title = "GO Terms per Category", at = c(0, 9),
-                                                           labels = c("0", "9")),
+                               column_names_gp = gpar(fontsize = 9),
+                               heatmap_legend_param = list(title = "Function", at = c(0, 1),
+                                                           labels = c("Absence", "Presence")),
                                column_title = " ",
                                column_title_gp = gpar(fontsize = 12),
                                bottom_annotation = column_annotation)
@@ -440,8 +432,8 @@ hm_count_non_signaling <- Heatmap(matrix_counts_non_signaling,
                                   width = unit(1, "cm"),
                                   column_title = " ",
                                   column_names_rot = 90,
-                                  column_names_gp = gpar(fontsize = 6),
-                                  column_title_gp = gpar(fontsize = 6))
+                                  column_names_gp = gpar(fontsize = 9),
+                                  column_title_gp = gpar(fontsize = 9))
 
 # Heatmap for non-signaling terms - P-value
 hm_pval_non_signaling <- Heatmap(matrix_pval_non_signaling,
@@ -454,14 +446,16 @@ hm_pval_non_signaling <- Heatmap(matrix_pval_non_signaling,
                                  width = unit(1, "cm"),
                                  column_title = " ",
                                  column_names_rot = 90,
-                                 column_names_gp = gpar(fontsize = 6),
-                                 column_title_gp = gpar(fontsize = 6))
+                                 column_names_gp = gpar(fontsize = 9),
+                                 column_title_gp = gpar(fontsize = 9))
 
 regulation_legend <- Legend(
   title = "Regulation",
   at = c("Up", "Down"),
   labels = c("Upregulated", "Downregulated"),
-  legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue"))
+  legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue")),
+  title_gp = gpar(fontsize = 10, fontface = "bold"),
+  labels_gp = gpar(fontsize = 10)
 )
 
 gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
@@ -533,7 +527,7 @@ draw(hm_binary_signaling + hm_count_signaling + hm_pval_signaling, annotation_le
 dev.off()
 
 # Non-signaling
-png("~/R/Figures2/Enrichment_NonSignaling_7dpi_Grouped.png", width = 5000, height = 2500, res = 500)
+png("~/R/Figures2/Enrichment_NonSignaling_7dpi_Grouped.png", width = 4000, height = 2000, res = 550)
 draw(hm_binary_non_signaling + hm_count_non_signaling + hm_pval_non_signaling, annotation_legend_list = list(regulation_legend), annotation_legend_side = "right")
 dev.off()
 
@@ -572,7 +566,7 @@ go_res <- enrichGO(
 barplot(go_res, showCategory = 20)
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system|nervous system process|apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$"
+pattern <- "nervous system|nervous system process|apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|^regulation of reactive oxygen species metabolic process$|neuroinflammatory"
 
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
@@ -590,11 +584,6 @@ gene_go <- filtered_go_res@result %>%
                        column = "SYMBOL"))
 
 gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
-gene_go <- gene_go %>%
-  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
-  "Lgals3", "Thbs2", "Postn", "Cbln1", "Srpx2", "Hapln1", "Lgi2", "Plxna4", "Plxnb1",
-  "Serpina3n", "Thbs1", "Lgals9", "Lama5", "Fn1", "Lamb2", "Hspg2", "Tgm2", "Dcn", "Cxcl12", "S100a9"
-))))
 
 genes_sci <- unique(gene_go$gene)
 
@@ -616,25 +605,21 @@ DEG_chronic_filtered <- bind_rows(up, down)
 
 DEG_chronic_filtered$Gene <- factor(DEG_chronic_filtered$Gene, levels = DEG_chronic_filtered$Gene[order(DEG_chronic_filtered$avg_log2FC)])
 
-DEG_chronic_plot <- ggplot(DEG_chronic_filtered, aes(x = Gene, y = avg_log2FC, fill = FC_Percentage_Cell_Expression)) +
-  geom_bar(stat = "identity") +
-  scale_fill_gradient(
-    low = "steelblue",
-    high = "firebrick",
-    limits = c(-0.5, 0.5),
-    labels = scales::label_number(accuracy = 0.1)
-  ) +
+DEG_chronic_plot <- ggplot(DEG_chronic_filtered, aes(x = Gene, y = avg_log2FC, fill = FC_Percentage_Cell_Expression)) + geom_bar(stat = "identity") +
+  scale_fill_gradient(low = "steelblue", high = "firebrick", limits = c(-0.5, 0.5),
+    labels = scales::label_number(accuracy = 0.1)) +
   labs(
     x = "Gene",
     y = "Average Log2FC",
-    fill = "Ratio of Cells Expressing the Gene"
-  ) +
+    fill = "Ratio of Cells Expressing the Gene",
+    title = "Top-ranked upregulated and downregulated genes based on log2 fold change"
+    ) + 
   theme_minimal(base_size = 13) +
-  theme(
-    legend.title = element_text(size = 14), 
-    axis.text.x = element_text(angle = 90, hjust = 1, size = 10, vjust = 0.5),
-    legend.position = "bottom"
-  )
+  theme(legend.title = element_text(size = 14), 
+        axis.text.x = element_text(angle = 90, hjust = 1, size = 14, vjust = 0.5), 
+        legend.position = "bottom", 
+        plot.title = element_text(hjust = 0.5))
+
 
 DEG_chronic_plot
 
@@ -669,7 +654,7 @@ go_res <- enrichGO(
     pAdjustMethod = "fdr")
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system|nervous system process|regulation of apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
+pattern <- "nervous system|nervous system process|regulation of apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|^regulation of reactive oxygen species metabolic process$|neuroinflammatory|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
   filter(p.adjust < 0.1) %>%
@@ -691,11 +676,6 @@ gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_te
 gene_go <- gene_go[!grepl("prostatic", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("presynapse", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("postsynapse", gene_go$go_term), ]
-gene_go <- gene_go %>%
-  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
-  "Lgals3", "Thbs2", "Postn", "Cbln1", "Srpx2", "Hapln1", "Lgi2", "Plxna4", "Plxnb1",
-  "Serpina3n", "Thbs1", "Lgals9", "Lama5", "Fn1", "Lamb2", "Hspg2", "Tgm2", "Dcn", "Cxcl12", "S100a9"
-))))
 
 # Significance 
 gene_go <- gene_go %>%
@@ -717,10 +697,13 @@ go_categories <- list(
     ),
   `Spinal cord development` = 
     "spinal cord",
-  `Immune and inflammatory processes` = c(
-    "acute",
+  `Chronic inflammatory microenvironment` = c(
+    "long-term",
+    "chronic",
     "inflammatory response",
-    "immune response"
+    "immune response",
+    "reactive oxygen species", 
+    "neuroninflammatory"
   ),
   `Apoptosis and neuronal survival` =
     "apoptotic signaling pathway",
@@ -855,7 +838,7 @@ final_matrix_non_signaling <- go_non_signaling %>%
   distinct(go_term_grouped, mean_pvalue_group) %>%
   left_join(binary_matrix_non_signaling, by = "go_term_grouped") %>%
   rowwise() %>%
-  mutate(total_count = sum(c_across(where(is.numeric))[-1])) %>%
+  mutate(total_count = sum(pmin(1, c_across(where(is.numeric))[-1]))) %>%
   ungroup()
 
 cols_to_check <- final_matrix_non_signaling %>%
@@ -911,8 +894,8 @@ matrix_pval_non_signaling <- -log10(final_matrix_non_signaling$mean_pvalue_group
 names(matrix_pval_non_signaling) <- final_matrix_non_signaling$go_term_grouped
 
 col_fun <- colorRamp2(
-  c(0, 1, 4, 8, 12),
-  c("#ebebf3", "#d1d3ea", "#b0b3d9", "#888cc2", "#666ca8"))
+  c(0, 1),
+  c("#ebebf3", "#888cc2"))
 col_fun2 <- colorRamp2(c(min(matrix_counts_non_signaling), max(matrix_counts_non_signaling)), c("#FAEBD7", "#8B8378"))
 col_fun3 <- colorRamp2(c(min(matrix_pval_non_signaling), max(matrix_pval_non_signaling)), c("cadetblue", "tomato"))
 
@@ -924,6 +907,7 @@ col_fun3_ <- colorRamp2(c(min(matrix_pval_signaling), max(matrix_pval_signaling)
 Plots
 
 ```{r}
+
 gene_regulation_status2 <- gene_regulation_status[colnames(matrix_binary_non_signaling)]
 
 regulation_colors <- c("Up" = "red", "Down" = "blue")
@@ -934,7 +918,7 @@ column_annotation <- HeatmapAnnotation(
         col = regulation_colors,
         gp = gpar(col = "white", lwd = 1.5)),
     annotation_name_side = "left",
-    annotation_name_gp = gpar(fontsize = 6))
+    annotation_name_gp = gpar(fontsize = 8))
 
 
 # Heatmap for non-signaling terms - Status (Presence/Absence)
@@ -947,12 +931,12 @@ hm_binary_non_signaling <- Heatmap(matrix_binary_non_signaling,
                                cluster_rows = FALSE,
                                show_row_dend = FALSE,
                                show_column_dend = FALSE,
-                               row_names_gp = gpar(fontsize = 7),
+                               row_names_gp = gpar(fontsize = 9),
                                row_names_side = "left",
                                column_names_rot = 90,
-                               column_names_gp = gpar(fontsize = 7),
-                               heatmap_legend_param = list(title = "GO Terms Per Category", at = c(0, 12),
-                                                           labels = c("0", "12")),
+                               column_names_gp = gpar(fontsize = 9),
+                               heatmap_legend_param = list(title = "Function", at = c(0, 1),
+                                                           labels = c("Absence", "Presence")),
                                column_title = " ",
                                column_title_gp = gpar(fontsize = 12),
                                bottom_annotation = column_annotation)
@@ -968,8 +952,8 @@ hm_count_non_signaling <- Heatmap(matrix_counts_non_signaling,
                                   width = unit(1, "cm"),
                                   column_title = " ",
                                   column_names_rot = 90,
-                                  column_names_gp = gpar(fontsize = 6),
-                                  column_title_gp = gpar(fontsize = 6))
+                                  column_names_gp = gpar(fontsize = 9),
+                                  column_title_gp = gpar(fontsize = 9))
 
 # Heatmap for non-signaling terms - P-value
 hm_pval_non_signaling <- Heatmap(matrix_pval_non_signaling,
@@ -982,14 +966,16 @@ hm_pval_non_signaling <- Heatmap(matrix_pval_non_signaling,
                                  width = unit(1, "cm"),
                                  column_title = " ",
                                  column_names_rot = 90,
-                                 column_names_gp = gpar(fontsize = 6),
-                                 column_title_gp = gpar(fontsize = 6))
+                                 column_names_gp = gpar(fontsize = 9),
+                                 column_title_gp = gpar(fontsize = 9))
 
 regulation_legend <- Legend(
   title = "Regulation",
   at = c("Up", "Down"),
   labels = c("Upregulated", "Downregulated"),
-  legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue"))
+  legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue")),
+  title_gp = gpar(fontsize = 10, fontface = "bold"),
+  labels_gp = gpar(fontsize = 10)
 )
 
 gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
